--- a/src/styles/_projectSection.scss
+++ b/src/styles/_projectSection.scss
@@ -1,7 +1,3 @@
-@mixin transition_ {
-    transition: all $transition-duration ease-in-out;
-}
-
 section#projects {
     #project-container {
         display: flex;
@@ -56,8 +52,9 @@ section#projects {
 
             // project links
             ul.links {
-                transform: scale(0);
-                position: absolute;
+                transform: scaleX(0);
+                position: relative;
+                width: 0;
                 list-style: none;
                 text-align: right;
                 display: block;
@@ -65,7 +62,8 @@ section#projects {
             }
 
             &:hover ul.links {
-                transform: scale(1);
+                transform: scaleX(1);
+                width: auto;
                 position: relative;
                 @include transition_();
             }
