--- a/src/styles/_aboutSection.scss
+++ b/src/styles/_aboutSection.scss
@@ -2,16 +2,22 @@ section#about {
     .content {
         display: flex;
         align-items: center;
+        border-left: 2px dashed $accent-color;
 
         p {
             flex-grow: 2;
-            border-left: 2px dashed $accent-color;
             padding-left: 1rem;
         }
 
         img {
             width: 300px;
             flex-grow: 1;
+        }
+
+        button {
+            margin: 1rem auto;
+            display: block;
+            padding: .5rem 1rem;
         }
     }
 }
