--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -2,12 +2,13 @@ button {
     background-color: $accent-color;
     border: none;
     outline: none;
-    cursor: pointer;
-    font-weight: bolder;
     color: $light-color;
     border-radius: $border-radius * 2;
     border: 1.5px solid teal;
+    font-weight: bolder;
     font-family: 'Nunito';
+    font-size: 1rem;
+    cursor: pointer;
     @include transition_();
 
     &:hover {
