--- a/src/styles/_externalLinks.scss
+++ b/src/styles/_externalLinks.scss
@@ -1,3 +1,17 @@
+@keyframes spinningAnimation {
+    0% {
+        transform: rotate(0) scale(1);
+    }
+
+    50% {
+        transform: rotate(180deg) scale(1.2);
+    }
+
+    100% {
+        transform: rotate(360deg) scale(1);
+    }
+}
+
 .external-links {
     font-size: larger;
     margin: 1rem;
@@ -8,5 +22,11 @@
     a {
         box-sizing: border-box;
         border: 10px solid transparent;
+        display: inline-block;
+        transform-origin: center;
+
+        &:hover {
+            animation: spinningAnimation .5s ease-in;
+        }
     }
 }
