fix font fallback

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,7 +14,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', 'Sans Serif';
+  font-family: 'Nunito', sans-serif;
 }
 
 :root {
@@ -27,7 +27,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Neus", "Sans Serif";
+  font-family: "Neus", sans-serif;
   font-weight: bold;
 }
 
