--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -2,12 +2,10 @@ a {
     color: $dark-color;
     font-weight: bold;
     text-decoration: none;
-    transition-property: all;
+    transition-property: color;
     transition-duration: $transition-duration;
 
-    &:hover {
+    &:not(:has(svg)):hover {
         color: $accent-color;
-        transition-property: all;
-        transition-duration: $transition-duration;
     }
 }
