ui: Change heading's font

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,8 +2,8 @@
 @import "atropos/scss";
 
 @font-face {
-  font-family: "Neus";
-  src: url("../assets/fonts/NeusaNextStdTrial-WideRegular-BF63ec3d6e7e6cd.otf");
+  font-family: "Aloevera";
+  src: url("../assets/fonts/Aloevera-Regular.otf");
 }
 
 @font-face {
@@ -27,7 +27,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Neus", sans-serif;
+  font-family: "Aloevera", sans-serif;
   font-weight: bold;
 }
 
