--- a/src/styles/_projectSection.scss
+++ b/src/styles/_projectSection.scss
@@ -1,3 +1,5 @@
+@import "animationMixins";
+
 @keyframes jump {
     from {
         transform: scale(1);
@@ -61,6 +63,7 @@ section#projects {
             border-radius: $border-radius;
             margin: 1rem;
             transition: all $transition-duration;
+            @include fadeInOnScroll;
 
             // project-title
             h3 {
