refactor & fix : Minor UI improvements, refactor and fixes
- Add image placeholder for projects with no screenshot available
- Add french translations for project informations
- Format using Prettier
- ...

--- a/src/components/Navbar/LanguageSwitch.scss
+++ b/src/components/Navbar/LanguageSwitch.scss
@@ -1,33 +1,34 @@
 @import "../../styles/variables";
 
 .language-switch {
-    &:not(ul){
-        cursor: pointer;
-    }
+  position: relative;
+  &:not(ul) {
+    cursor: pointer;
+  }
 
-    &:hover {
-        color: $accent-color;
-    }
+  &:hover {
+    color: $accent-color;
+  }
 
-    & ul {
-        display: none;
-        color: $dark-color;
-    }
+  & ul {
+    display: none;
+    color: $dark-color;
+  }
 
-    &:hover ul {
-        display: flex;
-        flex-direction: column;
-        background-color: $light-color;
-        padding: 1rem;
-        gap: 1rem;
-        border: 2px solid $gray-color;
-        position: absolute;
-        right: .5rem;
-        width: 5rem;
+  &:hover ul, &:focus ul {
+    display: flex;
+    flex-direction: column;
+    background-color: $light-color;
+    padding: 1rem;
+    gap: 1rem;
+    border: 2px solid $gray-color;
+    position: absolute;
+    right: 0.5rem;
+    width: 5rem;
 
-        li:hover {
-            color: $accent-color;
-            font-weight: bold;
-        }
+    li:hover {
+      color: $accent-color;
+      font-weight: bold;
     }
+  }
 }
