--- a/src/styles/_projectSection.scss
+++ b/src/styles/_projectSection.scss
@@ -31,6 +31,7 @@ section#projects {
         .project__stack-item {
             font-family: 'Nunito';
             cursor: pointer;
+            user-select: none;
             display: inline-block;
             background-color: $gray-color;
             border-radius: 10px;
@@ -106,6 +107,10 @@ section#projects {
                 text-align: right;
                 display: block;
                 font-size: larger;
+
+                .private {
+                    cursor: not-allowed;
+                }
             }
 
             &:hover {
